// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopNav/> render with default/require d props 1`] = `
<nav
  className="topnav "
  label="{{label}}"
>
  <Link
    className="topnav__link--main"
    to="/"
  >
    <img
      alt="Logo"
      className="topnav__logo--main"
      data-cy="topnav-main"
      src="/assets/img/placeholder.png"
    />
  </Link>
  <Link
    className="topnav__link--github"
    target="_blank"
    to="//github.com/eugene-matvejev/react-explorer"
  >
    <img
      alt="GitHub logo"
      className="topnav__logo--github"
      data-cy="topnav-github"
      src="/assets/img/github-logo.png"
    />
  </Link>
</nav>
`;

exports[`<TopNav/> render with optional props [::className] as "{{className}}" 1`] = `
<nav
  className="topnav {{className}}"
  label="{{label}}"
>
  <Link
    className="topnav__link--main"
    to="/"
  >
    <img
      alt="Logo"
      className="topnav__logo--main"
      data-cy="topnav-main"
      src="/assets/img/placeholder.png"
    />
  </Link>
  <Link
    className="topnav__link--github"
    target="_blank"
    to="//github.com/eugene-matvejev/react-explorer"
  >
    <img
      alt="GitHub logo"
      className="topnav__logo--github"
      data-cy="topnav-github"
      src="/assets/img/github-logo.png"
    />
  </Link>
</nav>
`;

exports[`<TopNav/> render with optional props [::data-cy] as "{{data-cy}}" 1`] = `
<nav
  className="topnav "
  label="{{label}}"
>
  <Link
    className="topnav__link--main"
    to="/"
  >
    <img
      alt="Logo"
      className="topnav__logo--main"
      data-cy="{{data-cy}}topnav-main"
      src="/assets/img/placeholder.png"
    />
  </Link>
  <Link
    className="topnav__link--github"
    target="_blank"
    to="//github.com/eugene-matvejev/react-explorer"
  >
    <img
      alt="GitHub logo"
      className="topnav__logo--github"
      data-cy="{{data-cy}}topnav-github"
      src="/assets/img/github-logo.png"
    />
  </Link>
</nav>
`;
